Added missing sample data for student detail summary page, passed state into container and page's respective components.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,4 +1,4 @@
-.chartjs-render-monitor {
+.chart-container.chartjs-render-monitor {
 	height: 125px!important;
 	width: 250px!important;
 }
@@ -25816,7 +25816,7 @@ a.cal-event-week {
 	}
 
 	.chart-line-container {
-		padding-top: 40px;
+		padding-top: 18px;
 		padding-bottom: 18px;
 	}
 
