--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,11 @@
+.react-datepicker-wrapper, .react-datepicker__input-container {
+	width: 100%!important;
+}
+
+.react-datepicker-popper {
+	z-index: 99!important;
+}
+
 .chart-container.chartjs-render-monitor {
 	height: 125px!important;
 	width: 250px!important;
