added active link color

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6367,7 +6367,7 @@ input[type=range]::-ms-thumb {
 }
 
 .sidenav li.active {
-	background-color: rgba(0, 0, 0, .05);
+	background-color: #e74021;
 }
 
 .sidenav li > a {
