--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,3 +1,12 @@
+.react-datepicker__portal {
+	width: 100%!important;
+	height: 100%!important;
+}
+
+.react-datepicker {
+	margin-top: 65px!important;
+}
+
 .slick-prev:before {
 	content: none!important;
 }
