--- a/static/css/main.css
+++ b/static/css/main.css
@@ -3,9 +3,9 @@
 	height: 100%!important;
 }
 
-.react-datepicker {
+/* .react-datepicker {
 	margin-top: 65px!important;
-}
+} */
 
 .slick-prev:before {
 	content: none!important;
