--- a/static/css/main.css
+++ b/static/css/main.css
@@ -10322,6 +10322,12 @@ input[type="submit"] {
 }
 
 /* Start Test Card */
+.card-scored .card-meta-block {
+  color: #989898;
+  font-size: 14px;
+  font-weight: 600;
+  padding: 0 0 15px;
+}
 .to-do-list .list-title {
   display: block;
   font-size: 1.25rem;
